Fix Scheduler View button alignment under IE 10/Edge browser. Closes #5179

--- a/styles/web/type-material.less
+++ b/styles/web/type-material.less
@@ -3538,6 +3538,12 @@ div.k-scheduler-marquee:after {
 }
 
 @media only screen and (max-width: 1024px) {
+    
+    .k-scheduler-toolbar > ul.k-scheduler-views {
+        right: 13px;
+        top: 0;
+    }
+    
     .k-webkit,
     .k-ff,
     .k-ie11,
